changed the background colour

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#E5E3C9;
+    background-color:#DEF5E5;
     text-align: center;
     font-family:'Courier New', Courier, monospace;
   }
